packages/apex-parser-ast/test/fixtures/validation/syntax-error/MismatchedSyntax.cls
public class MismatchedSyntax {
    public void test() }
}
